welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:20: error: ')' expected but ';' found.
  else  ( droite(); compteur(); )
                  ^Poucet:20: error: illegal start of statement
  else  ( droite(); compteur(); )
                                ^