welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var compteur = 0;
if (estSurBiscuit()){
	compteur = compteur + 1
	avance();
}


do {
   if (!croisement()){
    if (estSurBiscuit()){
	compteur = compteur + 1
	
}
  avance()
  }
  else if (compteur <= 0) {
  	gauche(); compteur = 0;
  }
  else  ( droite(); compteur(); )
}
while (!sortieTrouvee());
avance();


